--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,21 @@
     "php": ">=5.5",
     "composer/installers": "~1.0.12",
     "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "4.3.1"
+    "johnpbloch/wordpress": "4.3.1",
+    "wpackagist-plugin/bwp-minify": "1.3.3",
+    "wpackagist-plugin/contact-form-7": "4.3.1",
+    "wpackagist-plugin/facebook-page-feed-graph-api": "1.5.2",
+    "wpackagist-plugin/google-analytics-dashboard-for-wp": "4.8.3",
+    "wpackagist-plugin/google-analytics-for-wordpress": "5.4.6",
+    "wpackagist-plugin/mailchimp-for-wp": "3.0.3",
+    "wpackagist-plugin/mobble": "1.5",
+    "wpackagist-plugin/no-page-comment": "1.1",
+    "wpackagist-plugin/shareaholic": "7.7.1.0",
+    "wpackagist-plugin/google-calendar-events": "3.0.8",
+    "wpackagist-plugin/wp-sitemap-page": "1.5.6",
+    "wpackagist-plugin/wp-super-cache": "1.4.6",
+    "wpackagist-plugin/yawpp": "1.2.2",
+    "wpackagist-plugin/wordpress-seo": "3.0.5"
   },
   "extra": {
     "installer-paths": {
