--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
     "wpackagist-plugin/google-analytics-for-wordpress": "5.4.6",
     "wpackagist-plugin/mailchimp-for-wp": "3.0.9",
     "wpackagist-plugin/mobble": "1.5",
+    "wpackagist-plugin/simple-lightbox": "2.5.2",
     "wpackagist-plugin/wp-pagenavi": "2.89.1",
     "wpackagist-plugin/no-page-comment": "1.1",
     "wpackagist-plugin/shareaholic": "7.7.1.0",
