--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "vlucas/phpdotenv": "^2.0.1",
     "johnpbloch/wordpress": "4.4.0",
     "wpackagist-plugin/bwp-minify": "1.3.3",
+    "wpackagist-plugin/document-gallery": "4.1.6",
     "wpackagist-plugin/contact-form-7": "4.3.1",
     "wpackagist-plugin/facebook-page-feed-graph-api": "1.5.2",
     "wpackagist-plugin/google-analytics-dashboard-for-wp": "4.9.1.2",
@@ -51,7 +52,7 @@
     "wpackagist-plugin/google-calendar-events": "3.0.10",
     "wpackagist-plugin/wp-sitemap-page": "1.5.6",
     "wpackagist-plugin/wp-super-cache": "1.4.7",
-    "wpackagist-plugin/wordpress-seo": "3.0.5"
+    "wpackagist-plugin/wordpress-seo": "3.0.7"
   },
   "extra": {
     "installer-paths": {
